Fix responsive BrowseCard on mobile

--- a/src/COMPONENTS/BrowseCardsComponent/BrowseCards.css
+++ b/src/COMPONENTS/BrowseCardsComponent/BrowseCards.css
@@ -6,11 +6,11 @@
   padding: 1.5rem 0.6rem;
   border-radius: 10px;
   background-color: white;
-  height: 350px;
+  height: 100%;
 }
 .browsecardImg {
   width: 100%;
-  height: 300px;
+  height: 100%;
   overflow: hidden;
 }
 .browsecardImg img {
@@ -75,7 +75,7 @@
   height: 30px;
   object-fit: cover;
 }
-@media (min-width: 601px) and (max-width: 950px) {
+@media (min-width: 610px) and (max-width: 950px) {
   .browsecard {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -91,7 +91,7 @@
   }
   .browsecardImg {
     width: 100%;
-    height: 350px;
+    height: 100%;
   }
   .browsecardImg img {
     object-fit: cover;
@@ -117,6 +117,7 @@
     padding: 1rem 0.6rem;
     border-radius: 10px;
     height: 100%;
+    width: 100%;
   }
     .browsecardInfo {
     line-height: 1.4rem;
@@ -124,7 +125,7 @@
   }
   .browsecardImg {
     width: 100%;
-    height: 300px;
+    height: 100%;
   }
   .browsecardInfoTop {
     flex-wrap: wrap;
